<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mybitchinapps.cortana.daemonslayer.discover_delhi.activity.MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="false"
            android:title="@string/inbox_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:title="@string/starred_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:title="@string/sent_mail_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:title="@string/draft_string" />
        
        <item
            android:id="@+id/nav_subheader"
            android:title="Subgroup">
            <menu>
                <item
                    android:id="@+id/allmail"
                    android:checked="false"
                    android:title="@string/all_mail_string" />
                <item
                    android:id="@+id/trash"
                    android:checked="false"
                    android:title="@string/trash_string" />
                <item
                    android:id="@+id/spam"
                    android:checked="false"
                    android:title="@string/spam_string" />
            </menu>
        </item>
        <item
            android:id="@+id/settings_subgroup"
            android:title="Settings">

            <menu>
                <item
                    android:id="@+id/settings"
                    android:checked="false"
                    android:title="@string/spam_string" />
            </menu>

        </item>
    </group>
</menu>